--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.0",
+    "dotenv": "^16.0.3",
     "hardhat-shorthand": "^1.0.0"
   }
 }
